[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://map/Tile1.tres" type="TileSet" id=2]
[ext_resource path="res://props/shader/fog.shader" type="Shader" id=3]
[ext_resource path="res://zone/zone2/stage06.gd" type="Script" id=4]
[ext_resource path="res://enemy/Mayumi/Haniwa/haniwa.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/visual_stay/visual_stay.tscn" type="PackedScene" id=6]
[ext_resource path="res://map/parallax/city_parallax.tscn" type="PackedScene" id=8]
[ext_resource path="res://map/shaders/fog_shader.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/keiki.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/environment/Tiles/Platform_back.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Vector3( 0.9, 0.8, 0.8 )
shader_param/OCTAVES = 4
shader_param/time_speed = -0.6

[sub_resource type="TileSet" id=5]
0/name = "Platform_back.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 128 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 56 )

[node name="stage06" type="Node2D"]
script = ExtResource( 4 )

[node name="city_parallax" parent="." instance=ExtResource( 8 )]

[node name="fog_shader" parent="." instance=ExtResource( 9 )]
visible = true
material = SubResource( 1 )
position = Vector2( 192, -312 )

[node name="Back_map" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -786440, 0, 196611, -786439, 0, 196611, -786438, 0, 1, -786437, 0, 1, -786436, 0, 1, -786435, 0, 1, -786434, 0, 1, -786433, 0, 131077, -851960, 0, 131075, -851959, 0, 1, -851958, 0, 1, -851957, 0, 1, -851956, 0, 1, -851955, 0, 4, -720904, 0, 196611, -720903, 0, 196611, -720902, 0, 196611, -720901, 0, 196611, -720900, 0, 196612, -720899, 0, 65538, -786422, 0, 196608, -786421, 0, 196612, -786420, 0, 196611, -786419, 0, 196611, -655368, 0, 196611, -655367, 0, 196611, -655366, 0, 196611, -655365, 0, 196611, -655364, 0, 196612, -655363, 0, 65538, -720886, 0, 196612, -720885, 0, 65537, -720884, 0, 196611, -720883, 0, 196611, -589832, 0, 196611, -589831, 0, 196611, -589830, 0, 196611, -589829, 0, 196611, -589828, 0, 196612, -589827, 0, 196612, -589826, 0, 196610, -655350, 0, 196612, -655349, 0, 65537, -655348, 0, 196611, -655347, 0, 196611, -524296, 0, 196611, -524295, 0, 196611, -524294, 0, 196611, -524293, 0, 196611, -524292, 0, 196612, -524291, 0, 65537, -524290, 0, 65538, -589815, 0, 196608, -589814, 0, 196612, -589813, 0, 196612, -589812, 0, 196611, -589811, 0, 196611, -458760, 0, 196611, -458759, 0, 196611, -458758, 0, 196611, -458757, 0, 196611, -458756, 0, 196612, -458755, 1073741824, 196612, -458754, 1073741824, 196612, -458753, 0, 196610, -524280, 0, 196608, -524279, 0, 196612, -524278, 0, 196612, -524277, 0, 196611, -524276, 0, 196611, -524275, 0, 196611, -393224, 0, 196611, -393223, 0, 196611, -393222, 0, 196611, -393221, 1073741824, 196612, -393220, 0, 196612, -393219, 1073741824, 196612, -393218, 1073741824, 196612, -393217, 1073741824, 196612, -458752, 0, 196610, -458744, 0, 65536, -458743, 0, 65537, -458742, 0, 196612, -458741, 0, 196611, -458740, 0, 196611, -458739, 0, 196611, -327688, 0, 196611, -327687, 0, 196611, -327686, 0, 196611, -327685, 0, 196611, -327684, 0, 65537, -327683, 0, 196611, -327682, 1073741824, 196612, -327681, 1073741824, 196612, -393216, 0, 65538, -393208, 0, 65536, -393207, 0, 196612, -393206, 0, 196611, -393205, 0, 196611, -393204, 0, 196611, -393203, 0, 196611 )

[node name="Main_map" type="TileMap" parent="."]
position = Vector2( 0, -160 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
show_collision = true
collision_mask = 0
format = 1
tile_data = PoolIntArray( -524297, 0, 3, -524296, 0, 131073, -524295, 0, 131073, -524294, 0, 131073, -524293, 0, 131073, -524292, 0, 131073, -524291, 0, 131073, -524290, 0, 131073, -524289, 0, 131073, -589824, 0, 131073, -589823, 0, 131073, -589822, 0, 131073, -589821, 0, 131073, -589820, 0, 131073, -589819, 0, 131073, -589818, 0, 131073, -589817, 0, 131073, -589816, 0, 131073, -589815, 0, 131073, -589814, 0, 131073, -589813, 0, 131073, -589812, 0, 131073, -589811, 0, 131073, -589810, 0, 5, -458761, 0, 65538, -524274, 0, 65536, -393225, 0, 65538, -458738, 0, 65536, -327689, 0, 65538, -393202, 0, 65536, -262153, 0, 65538, -327666, 0, 65536, -196617, 0, 65538, -262130, 0, 65536, -131091, 0, 131073, -131090, 0, 131073, -131089, 0, 131073, -131088, 0, 131073, -131087, 0, 131073, -131086, 0, 131073, -131085, 0, 131073, -131084, 0, 131073, -131083, 0, 131073, -131082, 0, 131073, -131081, 0, 131074, -196594, 0, 131072, -196593, 0, 131073, -196592, 0, 131073, -196591, 0, 131073, -196590, 0, 131073, -196589, 0, 131073, -196588, 0, 131073, -196587, 0, 131073, -196586, 0, 131073, -196585, 0, 131073, -65555, 0, 65540, -65554, 0, 65540, -65553, 0, 65540, -65552, 0, 65540, -65551, 0, 65540, -65550, 0, 65540, -65549, 0, 65540, -65548, 0, 65540, -65547, 0, 65540, -65546, 0, 65540, -65545, 0, 65540, -131059, 0, 65540, -131058, 0, 65540, -131057, 0, 65540, -131056, 0, 65540, -131055, 0, 65540, -131054, 0, 65540, -131053, 0, 65540, -131052, 0, 65540, -131051, 0, 65540, -131050, 0, 65540, -131049, 0, 65540, -19, 0, 65540, -18, 0, 65540, -17, 0, 65540, -16, 0, 65540, -15, 0, 65540, -14, 0, 65540, -13, 0, 65540, -12, 0, 65540, -11, 0, 65540, -10, 0, 65540, -9, 0, 65540, -65522, 0, 65540, -65521, 0, 65540, -65520, 0, 65540, -65519, 0, 65540, -65518, 0, 65540, -65517, 0, 65540, -65516, 0, 65540, -65515, 0, 65540, -65514, 0, 65540, -65513, 0, 65540, 65517, 0, 1, 65518, 0, 1, 65519, 0, 1, 65520, 0, 1, 65521, 0, 1, 65522, 0, 1, 65523, 0, 1, 65524, 0, 1, 65525, 0, 1, 65526, 0, 1, 65527, 0, 1, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 1, 21, 0, 1, 22, 0, 1, 23, 0, 1 )

[node name="visual_stay" parent="." instance=ExtResource( 6 )]

[node name="player" parent="." instance=ExtResource( 10 )]
position = Vector2( -224, -192 )

[node name="MainCamera" type="Camera2D" parent="player"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 1 )

[node name="camera_limit_L" type="Position2D" parent="."]
position = Vector2( -512, -512 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="camera_limit_L2" type="Position2D" parent="."]
position = Vector2( -256, -512 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="camera_limit_R" type="Position2D" parent="."]
position = Vector2( 720, -448 )
__meta__ = {
"_gizmo_extents_": 20.0
}

[node name="camera_limit_R2" type="Position2D" parent="."]
position = Vector2( 480, -128 )
__meta__ = {
"_gizmo_extents_": 20.0
}

[node name="initial_position" type="Position2D" parent="."]
position = Vector2( -512, -192 )

[node name="end_position" type="Position2D" parent="."]
position = Vector2( 672, -192 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="boss_pos" type="Position2D" parent="."]
position = Vector2( 128, -320 )

[node name="boss_pos2" type="Position2D" parent="."]
position = Vector2( 128, -192 )

[node name="haniwas" type="Node2D" parent="."]

[node name="haniwa" parent="haniwas" instance=ExtResource( 5 )]
visible = false
position = Vector2( 0, -320 )

[node name="haniwa2" parent="haniwas" instance=ExtResource( 5 )]
visible = false
position = Vector2( 256, -320 )

[node name="begin" type="Area2D" parent="."]
position = Vector2( -568, -192 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="begin"]
shape = SubResource( 6 )

[node name="end" type="Area2D" parent="."]
position = Vector2( 736, -184 )
collision_layer = 0
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="collider" type="CollisionShape2D" parent="end"]
shape = SubResource( 6 )

[connection signal="body_entered" from="begin" to="." method="_on_begin_body_entered"]
[connection signal="body_entered" from="end" to="." method="_on_end_body_entered"]
